force-app/main/default/objects/Cycle__c/Cycle__c.object-meta.xml
<CustomObject>
    <description>Cycle defines a Retailer cycle that includes a date range, type (e.g. Reset Cycle). Cycle is related to the Retailer and a Project.</description>
    <label>Cycle</label>
    <nameField>
        <label>Project Cycle Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cycles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>