force-app/main/default/objects/Cycle__c/fields/CycleEndDate__c.field-meta.xml
<CustomField>
    <fullName>CycleEndDate__c</fullName>
    <description>The end date of the cycle (the Project End Date is auto-populated based upon this field).</description>
    <inlineHelpText>The end date of the cycle</inlineHelpText>
    <label>Cycle End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>