force-app/main/default/objects/Cycle__c/fields/CycleStartDate__c.field-meta.xml
<CustomField>
    <fullName>CycleStartDate__c</fullName>
    <description>The start date of the cycle (the Project Start Date is auto-populated based on this field).</description>
    <inlineHelpText>The start date of the cycle.</inlineHelpText>
    <label>Cycle Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>