force-app/main/default/objects/Cycle__c/fields/CycleType__c.field-meta.xml
<CustomField>
    <fullName>CycleType__c</fullName>
    <description>A picklist that will specify the type of cycle.</description>
    <inlineHelpText>Choose the type of cycle.</inlineHelpText>
    <label>Cycle Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Merchandising Cycle</fullName>
                <default>true</default>
                <label>Merchandising Cycle</label>
            </value>
            <value>
                <fullName>Reset Cycle</fullName>
            </value>
            <value>
                <fullName>Value 1</fullName>
                <isActive>false</isActive>
                <label>Value 1</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>