force-app/main/default/objects/Cycle__c/fields/Retailer__c.field-meta.xml
<CustomField>
    <fullName>Retailer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A search field that indicates the specific Retailer for this Cycle.</description>
    <inlineHelpText>Enter the retailer for this cycle.</inlineHelpText>
    <label>Retailer</label>
    <referenceTo>Retailer__c</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>