force-app/main/default/objects/Cycle__c/fields/RetailerAccount__c.field-meta.xml
<CustomField>
    <fullName>RetailerAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RetailerAccount</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cycles</relationshipLabel>
    <relationshipName>Cycles</relationshipName>
    <type>Lookup</type>
</CustomField>