force-app/main/default/objects/Cycle__c/fields/UniqueKey__c.field-meta.xml
<CustomField>
    <fullName>UniqueKey__c</fullName>
    <description>A field that indicates unique external ID for the Cycle.</description>
    <externalId>true</externalId>
    <inlineHelpText>The unique key for the cycle.</inlineHelpText>
    <label>UniqueKey</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>