force-app/main/default/objects/Cycle__c/validationRules/checkEnddate.validationRule-meta.xml
<ValidationRule>
    <fullName>checkEnddate</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( CycleEndDate__c )</errorConditionFormula>
    <errorMessage>Invalid data</errorMessage>
</ValidationRule>