force-app/main/default/objects/Cycle__c/validationRules/Startdate.validationRule-meta.xml
<ValidationRule>
    <fullName>Startdate</fullName>
    <active>true</active>
    <errorConditionFormula>CycleStartDate__c  &gt;  CycleEndDate__c</errorConditionFormula>
    <errorDisplayField>CycleStartDate__c</errorDisplayField>
    <errorMessage>Start date cannot come after the end date</errorMessage>
</ValidationRule>