force-app/main/default/objects/Cycle__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CycleStartDate__c</columns>
    <columns>CycleEndDate__c</columns>
    <columns>CycleType__c</columns>
    <columns>Retailer__c</columns>
    <columns>UniqueKey__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>